--- a/index.html
+++ b/index.html
@@ -5,25 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Gwynne's Goodies</title>
 
-  <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-
-  <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <style>
     html { scroll-behavior: smooth; }
     body { font-family: 'Roboto', sans-serif; line-height: 1.6; background-color: #fffaf0; }
 
-    /* Navbar */
     .navbar { background: #fff7f7; }
     .navbar-brand { font-family: 'Pacifico', cursive; font-size: 1.8rem; color: #e63946 !important; }
     .nav-link { color: #e63946 !important; font-weight: 500; }
     .nav-link:hover { text-decoration: underline; }
 
-    /* Hero */
     .hero {
-      background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('images/BananaMuffins.jpg') center/cover no-repeat;
+      background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('BananaMuffins.jpg') center/cover no-repeat;
       color: white;
       text-align: center;
       padding: 8rem 1rem;
@@ -31,14 +26,11 @@
     .hero h1 { font-size: 3rem; font-family: 'Pacifico', cursive; text-shadow: 2px 2px 6px rgba(0,0,0,0.5); }
     .hero p { font-size: 1.3rem; margin-top: 1rem; }
 
-    /* Section Titles */
     .section-title { font-size: 2.2rem; color: #e63946; margin-bottom: 1rem; text-transform: uppercase; }
 
-    /* Cards */
     .card { border-radius: 15px; transition: transform 0.3s ease, box-shadow 0.3s ease; }
     .card:hover { transform: translateY(-5px); box-shadow: 0 10px 25px rgba(0,0,0,0.2); }
 
-    /* Recipes playful section */
     .clever-section {
       background: #fff7f7;
       border-top: 4px dashed #f28b82;
@@ -58,7 +50,6 @@
     }
     @keyframes bounceIn { from { transform: scale(0.8); opacity: 0; } to { transform: scale(1); opacity: 1; } }
 
-    /* Footer */
     footer { background: #e63946; color: white; text-align: center; padding: 1.5rem 1rem; font-size: 0.95rem; }
     footer a { color: white; text-decoration: underline; }
 
@@ -66,7 +57,6 @@
 </head>
 <body>
 
-  <!-- Navbar -->
   <nav class="navbar navbar-expand-lg sticky-top shadow-sm">
     <div class="container">
       <a class="navbar-brand" href="#">Gwynne's Goodies</a>
@@ -84,7 +74,6 @@
     </div>
   </nav>
 
-  <!-- Hero -->
   <section class="hero">
     <div class="container">
       <h1>Sweet Treats, Baked with Love</h1>
@@ -92,7 +81,6 @@
     </div>
   </section>
 
-  <!-- Menu -->
   <section id="menu" class="text-center bg-light py-5">
     <div class="container">
       <h2 class="section-title">Menu</h2>
@@ -100,7 +88,7 @@
       <div class="row mt-4">
         <div class="col-md-4 mb-4">
           <div class="card shadow-sm h-100">
-            <img src="images/CookieDough.JPG" class="card-img-top" alt="Classic Cookies">
+            <img src="CookieDough.JPG" class="card-img-top" alt="Classic Cookies">
             <div class="card-body">
               <h5 class="card-title">Classic Cookies</h5>
               <p class="card-text">Chewy, gooey, impossible to eat just one.</p>
@@ -109,7 +97,7 @@
         </div>
         <div class="col-md-4 mb-4">
           <div class="card shadow-sm h-100">
-            <img src="images/Brownies.jpg" class="card-img-top" alt="Fudgy Brownies">
+            <img src="Brownies.jpg" class="card-img-top" alt="Fudgy Brownies">
             <div class="card-body">
               <h5 class="card-title">Fudgy Brownies</h5>
               <p class="card-text">Rich chocolate squares that melt in your mouth.</p>
@@ -118,7 +106,7 @@
         </div>
         <div class="col-md-4 mb-4">
           <div class="card shadow-sm h-100">
-            <img src="images/BananaMuffins.jpg" class="card-img-top" alt="Custom Cakes">
+            <img src="BananaMuffins.jpg" class="card-img-top" alt="Custom Cakes">
             <div class="card-body">
               <h5 class="card-title">Custom Cakes</h5>
               <p class="card-text">Celebrations are sweeter with a personal touch.</p>
@@ -129,7 +117,6 @@
     </div>
   </section>
 
-  <!-- Recipes playful section -->
   <section class="clever-section">
     <div class="container">
       <h2 class="section-title">Recipes? 🍪</h2>
@@ -143,7 +130,6 @@
     </div>
   </section>
 
-  <!-- Contact -->
   <section id="contact" class="text-center py-5">
     <div class="container">
       <h2 class="section-title">Contact</h2>
@@ -152,7 +138,6 @@
     </div>
   </section>
 
-  <!-- Footer -->
   <footer>
     <p>&copy; 2025 Gwynne's Goodies. Baked with ❤️ in Sydney.</p>
   </footer>
