--- a/about/index.html
+++ b/about/index.html
@@ -7,15 +7,59 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 <style>
-body { font-family: 'Roboto', sans-serif; background-color: #fffaf0; }
-h1 { font-family: 'Pacifico', cursive; color: #e63946; text-align: center; margin: 2rem 0; }
-p { max-width: 700px; margin: 1rem auto; text-align: center; font-size: 1.15rem; }
-a { color: #e63946; text-decoration: underline; }
+body { font-family: 'Roboto', sans-serif; background-color: #fffaf0; margin:0; }
+.navbar { background: #fff7f7; }
+.navbar-brand { font-family: 'Pacifico', cursive; font-size: 1.8rem; color: #e63946 !important; }
+.nav-link { color: #e63946 !important; font-weight: 500; }
+.nav-link:hover { text-decoration: underline; }
+.hero { 
+  background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('../BananaMuffins.jpg') center/cover no-repeat; 
+  text-align: center; color: white; padding: 6rem 1rem;
+}
+.hero h1 { font-family: 'Pacifico', cursive; font-size: 3rem; text-shadow: 2px 2px 6px rgba(0,0,0,0.5);}
+.hero p { font-size: 1.2rem; margin-top: 1rem; }
+.container { max-width: 900px; margin: auto; padding: 2rem 1rem; }
+footer { background: #e63946; color: white; text-align: center; padding: 1.5rem 1rem; }
+footer a { color: white; text-decoration: underline; }
 </style>
 </head>
 <body>
-<h1>About Me</h1>
-<p>Hi, I’m Gwynne — baker, dreamer, and lover of all things sweet. I started Gwynne’s Goodies to share my favorite treats with friends, family, and now you!</p>
-<p><a href="../index.html">Back to Home</a></p>
+
+<nav class="navbar navbar-expand-lg sticky-top shadow-sm">
+  <div class="container">
+    <a class="navbar-brand" href="../index.html">Gwynne's Goodies</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="../recipes/index.html">Recipes</a></li>
+        <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+<section class="hero">
+  <div class="container">
+    <h1>About Me</h1>
+    <p>Hi, I’m Gwynne — baker, dreamer, and lover of all things sweet. I started Gwynne’s Goodies to share my favorite treats with friends, family, and now you!</p>
+  </div>
+</section>
+
+<section>
+  <div class="container text-center">
+    <h2>My Story</h2>
+    <p>I’ve been baking since I was a kid, experimenting with flavors and textures, and sharing my creations with everyone I know. Now, Gwynne's Goodies brings these treats to you with love and care.</p>
+    <img src="../CowboyCookie.jpg" alt="Cookies" style="max-width:100%; border-radius: 15px; box-shadow:0 5px 20px rgba(0,0,0,0.2); margin-top:2rem;">
+  </div>
+</section>
+
+<footer>
+  <p>&copy; 2025 Gwynne's Goodies. Baked with ❤️ in Sydney. <a href="../index.html">Home</a></p>
+</footer>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
