--- a/index.html
+++ b/index.html
@@ -5,135 +5,116 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Gwynne's Goodies</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 <style>
-body { font-family: 'Roboto', sans-serif; background-color: #fffaf0; margin:0; }
-.navbar { background: #fff7f7; }
-.navbar-brand { font-family: 'Pacifico', cursive; font-size: 1.8rem; color: #e63946 !important; }
-.nav-link { color: #e63946 !important; font-weight: 500; }
-.nav-link:hover { text-decoration: underline; }
+body { font-family: Arial, sans-serif; background:#fffaf0; margin:0; }
+.navbar { background:#fff7f7; }
+.navbar-brand { color:#e63946 !important; font-weight:bold; font-size:1.8rem; }
+.nav-link { color:#e63946 !important; }
+.nav-link:hover { text-decoration:underline; }
 
-.hero {
-  background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('BananaMuffins.jpg') center/cover no-repeat;
-  color: white; text-align: center; padding: 8rem 1rem;
-}
-.hero h1 { font-family: 'Pacifico', cursive; font-size: 3rem; text-shadow: 2px 2px 6px rgba(0,0,0,0.5);}
-.hero p { font-size: 1.3rem; margin-top: 1rem; }
+.hero { background: url('/BananaMuffins.jpg') center/cover no-repeat; text-align:center; color:white; padding:8rem 1rem; }
+.hero h1 { font-size:3rem; text-shadow:2px 2px 6px rgba(0,0,0,0.5); }
+.hero p { font-size:1.3rem; margin-top:1rem; }
 
-.section-title { font-size: 2.2rem; color: #e63946; margin-bottom: 1rem; }
+.section-title { font-size:2.2rem; color:#e63946; margin-bottom:1rem; }
 
-.card { border-radius: 15px; transition: transform 0.3s ease, box-shadow 0.3s ease; }
-.card:hover { transform: translateY(-5px); box-shadow: 0 10px 25px rgba(0,0,0,0.2); }
+.card { border-radius:15px; transition: transform 0.3s, box-shadow 0.3s; }
+.card:hover { transform:translateY(-5px); box-shadow:0 10px 25px rgba(0,0,0,0.2); }
 
-.clever-section {
-  background: #fff7f7;
-  border-top: 4px dashed #f28b82;
-  border-bottom: 4px dashed #f28b82;
-  text-align: center;
-  padding: 4rem 1rem;
-  animation: bounceIn 1s ease;
-}
-.recipe-emoji { font-size: 2rem; display: inline-block; margin: 0 0.5rem; animation: bounce 2s infinite; }
-.recipe-emoji:nth-child(2) { animation-delay: 0.3s; }
-.recipe-emoji:nth-child(3) { animation-delay: 0.6s; }
+.clever-section { background:#fff7f7; border-top:4px dashed #f28b82; border-bottom:4px dashed #f28b82; text-align:center; padding:4rem 1rem; }
+.recipe-emoji { font-size:2rem; display:inline-block; margin:0 0.5rem; animation:bounce 2s infinite; }
+.recipe-emoji:nth-child(2) { animation-delay:0.3s; }
+.recipe-emoji:nth-child(3) { animation-delay:0.6s; }
+@keyframes bounce {0%,20%,50%,80%,100%{transform:translateY(0);}40%{transform:translateY(-12px);}60%{transform:translateY(-6px);}}
 
-@keyframes bounce {
-  0%,20%,50%,80%,100% { transform: translateY(0); }
-  40% { transform: translateY(-12px); }
-  60% { transform: translateY(-6px); }
-}
-@keyframes bounceIn { from { transform: scale(0.8); opacity: 0; } to { transform: scale(1); opacity: 1; } }
-
-footer { background: #e63946; color: white; text-align: center; padding: 1.5rem 1rem; }
-footer a { color: white; text-decoration: underline; }
-
+footer { background:#e63946; color:white; text-align:center; padding:1.5rem 1rem; }
 </style>
 </head>
 <body>
 
 <nav class="navbar navbar-expand-lg sticky-top shadow-sm">
-  <div class="container">
-    <a class="navbar-brand" href="index.html">Gwynne's Goodies</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link" href="about/index.html">About</a></li>
-        <li class="nav-item"><a class="nav-link" href="#menu">Menu</a></li>
-        <li class="nav-item"><a class="nav-link" href="recipes/index.html">Recipes</a></li>
-        <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-      </ul>
-    </div>
-  </div>
+<div class="container">
+<a class="navbar-brand" href="/index.html">Gwynne's Goodies</a>
+<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+<span class="navbar-toggler-icon"></span>
+</button>
+<div class="collapse navbar-collapse" id="navbarNav">
+<ul class="navbar-nav ms-auto">
+<li class="nav-item"><a class="nav-link" href="/about/index.html">About</a></li>
+<li class="nav-item"><a class="nav-link" href="#menu">Menu</a></li>
+<li class="nav-item"><a class="nav-link" href="/recipes/index.html">Recipes</a></li>
+<li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+</ul>
+</div>
+</div>
 </nav>
 
 <section class="hero">
-  <div class="container">
-    <h1>Sweet Treats, Baked with Love</h1>
-    <p>Welcome to Gwynne’s Goodies — homemade happiness in every bite.</p>
-  </div>
+<div class="container">
+<h1>Sweet Treats, Baked with Love</h1>
+<p>Welcome to Gwynne’s Goodies — homemade happiness in every bite.</p>
+</div>
 </section>
 
-<section id="menu" class="text-center bg-light py-5">
-  <div class="container">
-    <h2 class="section-title">Menu</h2>
-    <p>Cookies, brownies, cakes, and more — baked fresh just for you.</p>
-    <div class="row mt-4">
-      <div class="col-md-4 mb-4">
-        <div class="card shadow-sm h-100">
-          <img src="CookieDough.JPG" class="card-img-top" alt="Classic Cookies">
-          <div class="card-body">
-            <h5 class="card-title">Classic Cookies</h5>
-            <p class="card-text">Chewy, gooey, impossible to eat just one.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4 mb-4">
-        <div class="card shadow-sm h-100">
-          <img src="Brownies.jpg" class="card-img-top" alt="Fudgy Brownies">
-          <div class="card-body">
-            <h5 class="card-title">Fudgy Brownies</h5>
-            <p class="card-text">Rich chocolate squares that melt in your mouth.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4 mb-4">
-        <div class="card shadow-sm h-100">
-          <img src="BananaMuffins.jpg" class="card-img-top" alt="Custom Cakes">
-          <div class="card-body">
-            <h5 class="card-title">Custom Cakes</h5>
-            <p class="card-text">Celebrations are sweeter with a personal touch.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+<section id="menu" class="text-center py-5 bg-light">
+<div class="container">
+<h2 class="section-title">Menu</h2>
+<p>Cookies, brownies, cakes, and more — baked fresh just for you.</p>
+<div class="row mt-4">
+<div class="col-md-4 mb-4">
+<div class="card shadow-sm h-100">
+<img src="/CookieDough.JPG" class="card-img-top" alt="Classic Cookies">
+<div class="card-body">
+<h5 class="card-title">Classic Cookies</h5>
+<p class="card-text">Chewy, gooey, impossible to eat just one.</p>
+</div>
+</div>
+</div>
+<div class="col-md-4 mb-4">
+<div class="card shadow-sm h-100">
+<img src="/Brownies.jpg" class="card-img-top" alt="Fudgy Brownies">
+<div class="card-body">
+<h5 class="card-title">Fudgy Brownies</h5>
+<p class="card-text">Rich chocolate squares that melt in your mouth.</p>
+</div>
+</div>
+</div>
+<div class="col-md-4 mb-4">
+<div class="card shadow-sm h-100">
+<img src="/BananaMuffins.jpg" class="card-img-top" alt="Custom Cakes">
+<div class="card-body">
+<h5 class="card-title">Custom Cakes</h5>
+<p class="card-text">Celebrations are sweeter with a personal touch.</p>
+</div>
+</div>
+</div>
+</div>
+</div>
 </section>
 
 <section class="clever-section">
-  <div class="container">
-    <h2 class="section-title">Recipes? 🍪</h2>
-    <p>Nice try… the family secrets stay in the vault. 🔒😉</p>
-    <p>But here’s a freebie: Step 1 — preheat oven. Step 2 — call Gwynne. Step 3 — enjoy delicious goodies. 🎂</p>
-    <div class="mt-4">
-      <span class="recipe-emoji">🥧</span>
-      <span class="recipe-emoji">🍰</span>
-      <span class="recipe-emoji">🍪</span>
-    </div>
-  </div>
+<div class="container">
+<h2 class="section-title">Recipes? 🍪</h2>
+<p>Nice try… the family secrets stay in the vault. 🔒😉</p>
+<p>But here’s a freebie: Step 1 — preheat oven. Step 2 — call Gwynne. Step 3 — enjoy delicious goodies. 🎂</p>
+<div class="mt-4">
+<span class="recipe-emoji">🥧</span>
+<span class="recipe-emoji">🍰</span>
+<span class="recipe-emoji">🍪</span>
+</div>
+</div>
 </section>
 
 <section id="contact" class="text-center py-5">
-  <div class="container">
-    <h2 class="section-title">Contact</h2>
-    <p>Got a craving or a celebration coming up? Let’s talk goodies!</p>
-    <p>Email: <a href="mailto:hello@gwynnesgoodies.com">hello@gwynnesgoodies.com</a></p>
-  </div>
+<div class="container">
+<h2 class="section-title">Contact</h2>
+<p>Got a craving or a celebration coming up? Let’s talk goodies!</p>
+<p>Email: <a href="mailto:hello@gwynnesgoodies.com">hello@gwynnesgoodies.com</a></p>
+</div>
 </section>
 
 <footer>
-  <p>&copy; 2025 Gwynne's Goodies. Baked with ❤️ in Sydney.</p>
+<p>&copy; 2025 Gwynne's Goodies. Baked with ❤️ in Sydney.</p>
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
