--- a/recipes/index.html
+++ b/recipes/index.html
@@ -5,83 +5,67 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Recipes - Gwynne's Goodies</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 <style>
-body { font-family: 'Roboto', sans-serif; background-color: #fffaf0; margin:0; }
-.navbar { background: #fff7f7; }
-.navbar-brand { font-family: 'Pacifico', cursive; font-size: 1.8rem; color: #e63946 !important; }
-.nav-link { color: #e63946 !important; font-weight: 500; }
-.nav-link:hover { text-decoration: underline; }
+body { font-family: Arial, sans-serif; background:#fffaf0; margin:0; }
+.navbar { background:#fff7f7; }
+.navbar-brand { color:#e63946 !important; font-weight:bold; font-size:1.8rem; }
+.nav-link { color:#e63946 !important; }
+.nav-link:hover { text-decoration:underline; }
 
-.hero { 
-  background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('../BananaMuffins.jpg') center/cover no-repeat; 
-  text-align: center; color: white; padding: 6rem 1rem;
-}
-.hero h1 { font-family: 'Pacifico', cursive; font-size: 3rem; text-shadow: 2px 2px 6px rgba(0,0,0,0.5);}
-.hero p { font-size: 1.2rem; margin-top: 1rem; }
+.hero { background: url('/BananaMuffins.jpg') center/cover no-repeat; text-align:center; color:white; padding:6rem 1rem; }
+.hero h1 { font-size:3rem; text-shadow:2px 2px 6px rgba(0,0,0,0.5); }
+.hero p { font-size:1.2rem; margin-top:1rem; }
 
-.clever-section {
-  background: #fff7f7;
-  border-top: 4px dashed #f28b82;
-  border-bottom: 4px dashed #f28b82;
-  text-align: center;
-  padding: 4rem 1rem;
-  animation: bounceIn 1s ease;
-}
-.recipe-emoji { font-size: 2rem; display: inline-block; margin: 0 0.5rem; animation: bounce 2s infinite; }
-.recipe-emoji:nth-child(2) { animation-delay: 0.3s; }
-.recipe-emoji:nth-child(3) { animation-delay: 0.6s; }
+.clever-section { background:#fff7f7; border-top:4px dashed #f28b82; border-bottom:4px dashed #f28b82; text-align:center; padding:4rem 1rem; }
+.recipe-emoji { font-size:2rem; display:inline-block; margin:0 0.5rem; animation:bounce 2s infinite; }
+.recipe-emoji:nth-child(2) { animation-delay:0.3s; }
+.recipe-emoji:nth-child(3) { animation-delay:0.6s; }
+@keyframes bounce {0%,20%,50%,80%,100%{transform:translateY(0);}40%{transform:translateY(-12px);}60%{transform:translateY(-6px);}}
 
-@keyframes bounce {
-  0%,20%,50%,80%,100% { transform: translateY(0); }
-  40% { transform: translateY(-12px); }
-  60% { transform: translateY(-6px); }
-}
-@keyframes bounceIn { from { transform: scale(0.8); opacity: 0; } to { transform: scale(1); opacity: 1; } }
+.container { max-width:900px; margin:auto; padding:2rem 1rem; text-align:center; }
 
-footer { background: #e63946; color: white; text-align: center; padding: 1.5rem 1rem; }
-footer a { color: white; text-decoration: underline; }
-
+footer { background:#e63946; color:white; text-align:center; padding:1.5rem 1rem; }
+footer a { color:white; text-decoration:underline; }
 </style>
 </head>
 <body>
 
 <nav class="navbar navbar-expand-lg sticky-top shadow-sm">
-  <div class="container">
-    <a class="navbar-brand" href="../index.html">Gwynne's Goodies</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="../about/index.html">About</a></li>
-      </ul>
-    </div>
-  </div>
+<div class="container">
+<a class="navbar-brand" href="/index.html">Gwynne's Goodies</a>
+<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+<span class="navbar-toggler-icon"></span>
+</button>
+<div class="collapse navbar-collapse" id="navbarNav">
+<ul class="navbar-nav ms-auto">
+<li class="nav-item"><a class="nav-link" href="/index.html">Home</a></li>
+<li class="nav-item"><a class="nav-link" href="/about/index.html">About</a></li>
+</ul>
+</div>
+</div>
 </nav>
 
 <section class="hero">
-  <div class="container">
-    <h1>Recipes? 🍪</h1>
-    <p>Nice try… the family secrets stay in the vault. 🔒😉</p>
-  </div>
+<div class="container">
+<h1>Recipes? 🍪</h1>
+<p>Nice try… the family secrets stay in the vault. 🔒😉</p>
+</div>
 </section>
 
 <section class="clever-section">
-  <div class="container">
-    <p>But here’s a freebie: Step 1 — preheat oven. Step 2 — call Gwynne. Step 3 — enjoy delicious goodies. 🎂</p>
-    <div class="mt-4">
-      <span class="recipe-emoji">🥧</span>
-      <span class="recipe-emoji">🍰</span>
-      <span class="recipe-emoji">🍪</span>
-    </div>
-    <img src="../CowboyCookie.jpg" alt="Cookies" style="max-width:100%; border-radius:15px; box-shadow:0 5px 20px rgba(0,0,0,0.2); margin-top:2rem;">
-  </div>
+<div class="container">
+<p>But here’s a freebie: Step 1 — preheat oven. Step 2 — call Gwynne. Step 3 — enjoy delicious goodies. 🎂</p>
+<div class="mt-4">
+<span class="recipe-emoji">🥧</span>
+<span class="recipe-emoji">🍰</span>
+<span class="recipe-emoji">🍪</span>
+</div>
+<img src="/CowboyCookie.jpg" alt="Cookies" style="max-width:100%; border-radius:15px; box-shadow:0 5px 20px rgba(0,0,0,0.2); margin-top:2rem;">
+</div>
 </section>
 
 <footer>
-  <p>&copy; 2025 Gwynne's Goodies. Baked with ❤️ in Sydney. <a href="../index.html">Home</a></p>
+<p>&copy; 2025 Gwynne's Goodies. Baked with ❤️ in Sydney. <a href="/index.html">Home</a></p>
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
