--- a/about/index.html
+++ b/about/index.html
@@ -12,7 +12,7 @@ body { font-family: Arial, sans-serif; background:#fffaf0; margin:0; }
 .nav-link { color:#e63946 !important; }
 .nav-link:hover { text-decoration:underline; }
 
-.hero { background: url('/BananaMuffins.jpg') center/cover no-repeat; text-align:center; color:white; padding:6rem 1rem; }
+.hero { background: url('../BananaMuffins.jpg') center/cover no-repeat; text-align:center; color:white; padding:6rem 1rem; }
 .hero h1 { font-size:3rem; text-shadow:2px 2px 6px rgba(0,0,0,0.5); }
 .hero p { font-size:1.2rem; margin-top:1rem; }
 
@@ -25,14 +25,14 @@ footer a { color:white; text-decoration:underline; }
 
 <nav class="navbar navbar-expand-lg sticky-top shadow-sm">
 <div class="container">
-<a class="navbar-brand" href="/index.html">Gwynne's Goodies</a>
+<a class="navbar-brand" href="../index.html">Gwynne's Goodies</a>
 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
 <span class="navbar-toggler-icon"></span>
 </button>
 <div class="collapse navbar-collapse" id="navbarNav">
 <ul class="navbar-nav ms-auto">
-<li class="nav-item"><a class="nav-link" href="/index.html">Home</a></li>
-<li class="nav-item"><a class="nav-link" href="/recipes/index.html">Recipes</a></li>
+<li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
+<li class="nav-item"><a class="nav-link" href="../recipes/index.html">Recipes</a></li>
 </ul>
 </div>
 </div>
@@ -49,12 +49,12 @@ footer a { color:white; text-decoration:underline; }
 <div class="container">
 <h2>My Story</h2>
 <p>I’ve been baking since I was a kid, experimenting with flavors and textures, and sharing my creations with everyone I know. Now, Gwynne's Goodies brings these treats to you with love and care.</p>
-<img src="/CowboyCookie.jpg" alt="Cookies" style="max-width:100%; border-radius:15px; box-shadow:0 5px 20px rgba(0,0,0,0.2); margin-top:2rem;">
+<img src="../CowboyCookie.jpg" alt="Cookies" style="max-width:100%; border-radius:15px; box-shadow:0 5px 20px rgba(0,0,0,0.2); margin-top:2rem;">
 </div>
 </section>
 
 <footer>
-<p>&copy; 2025 Gwynne's Goodies. Baked with ❤️ in Sydney. <a href="/index.html">Home</a></p>
+<p>&copy; 2025 Gwynne's Goodies. Baked with ❤️ in Sydney. <a href="../index.html">Home</a></p>
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
